Mensaje explicando los cambios

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <h1>¿Cuantás calorías necesita tu cuerpo?</h1>
+    <h1>¿Cuantas calorías necesita tu cuerpo?</h1>
 
     <h2>¿Qué es el requerimiento energético?</h2>
 
