--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Simulador Nutricional</title>
+
+    <link rel="stylesheet" href="css/styles.css">
+
 </head>
 <body>
 
-    <h1>¿Cuantas calorías necesita tu cuerpo?</h1>
+    <header class="titulo-principal">
+    <h1>¿Cuántas calorías necesita tu cuerpo?</h1>
+    </header>
+
 
     <h2>¿Qué es el requerimiento energético?</h2>
 
